[build-system]
requires = ["requests", "hatchling"]
build-backend = "hatchling.build"#

[project]
name = "luke_roberts_cloud_api_errorphile"
version = "0.0.1"
authors = [
  { name="Julian Lenzenweger", email="j.lenzenweger@gmail.com" },
]
description = "Exposes the API of the Luke Roberts cloud via utility classes. Luke Roberts is a Lighting Manufacturer."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"